# goit-pythonweb-hw-08

./: .gitignore  main.py  pyproject.toml  step_by_step_guide.txt
migrations/: env.py
migrations/versions/: 76c00284bc70_initial_migration.py
src/conf/: config.py  constants.py  messages.py
src/database/: db.py
src/models/: contact_model.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contact.py
src/services/: contacts.py
